src/objects/Lead__c.object
<CustomObject>
    <fields>
        <fullName>Address_Line_1_2__c</fullName>
        <description>Correspondence Address</description>
        <label>Correspondence Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Permanent Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2_2__c</fullName>
        <description>Correspondence Address</description>
        <label>Correspondence Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Permanent Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Email_Triggered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this field will be checked when an email alert is sent by a campaign. So default WF rule email alert won&apos;t be sent</description>
        <label>Campaign Email Triggered?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <description>This field will be used in email templates.</description>
        <formula>Campaign__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Name of the current campaign the Lead belongs to</inlineHelpText>
        <label>Campaign Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Name_text__c</fullName>
        <formula>Campaign__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Name Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City_2__c</fullName>
        <description>correspondence Address</description>
        <label>City (Correspondence)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>Current City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_p__c</fullName>
        <label>City (Permanent)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Controller_email_triggered_for__c</fullName>
        <description>This field is used to identify from where the controller email is triggered</description>
        <label>Controller email triggered for</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Instagram</fullName>
                </value>
                <value>
                    <fullName>Whatsapp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Copy_address_from_permanent_Address__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Copy address from permanent Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_2__c</fullName>
        <description>correspondence Address</description>
        <label>Country (Correspondence)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Interested_In__c</fullName>
        <label>Country Interested In</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>New Zealand</fullName>
                </value>
                <value>
                    <fullName>Switzerland</fullName>
                </value>
                <value>
                    <fullName>Malaysia</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Grenada</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Belarus - Medicine only</fullName>
                </value>
                <value>
                    <fullName>Russia - Medicine only</fullName>
                </value>
                <value>
                    <fullName>Latvia</fullName>
                    <isActive>false</isActive>
                    <label>Latvia</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_p__c</fullName>
        <description>Country for Permanent Address</description>
        <label>Country (Permanent)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Qualification__c</fullName>
        <label>Current Qualification</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Postgraduate</fullName>
                </value>
                <value>
                    <fullName>Undergraduate</fullName>
                </value>
                <value>
                    <fullName>HND</fullName>
                </value>
                <value>
                    <fullName>Diploma</fullName>
                </value>
                <value>
                    <fullName>Certificates</fullName>
                </value>
                <value>
                    <fullName>Foundation Course</fullName>
                </value>
                <value>
                    <fullName>A/L</fullName>
                </value>
                <value>
                    <fullName>O/L</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <externalId>true</externalId>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Expected_Year_to_Begin__c</fullName>
        <label>Expected Year &amp; Month</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook_Lead_ID__c</fullName>
        <externalId>true</externalId>
        <label>Facebook Lead ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_Phone_Number__c</fullName>
        <label>Home Phone Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interested_Field_of_Study__c</fullName>
        <label>Interested Field of Study</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Initiated_Sources__c</fullName>
        <label>Lead Initiated Sources</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>How did you Hear About us ?</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Paper Advertisement</fullName>
                </value>
                <value>
                    <fullName>Topjobs Advertisement</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Television Advertisement</fullName>
                </value>
                <value>
                    <fullName>Radio Advertisement</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Text Message</fullName>
                </value>
                <value>
                    <fullName>Instagram</fullName>
                </value>
                <value>
                    <fullName>Leaflet</fullName>
                </value>
                <value>
                    <fullName>Google Ads</fullName>
                </value>
                <value>
                    <fullName>YouTube</fullName>
                </value>
                <value>
                    <fullName>Exhibition</fullName>
                </value>
                <value>
                    <fullName>Other Event</fullName>
                </value>
                <value>
                    <fullName>Visit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <label>Lead Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Undecided</fullName>
                </value>
                <value>
                    <fullName>Not Reachable</fullName>
                </value>
                <value>
                    <fullName>Prospective</fullName>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Not Converted</fullName>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>Deactivated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Student</fullName>
                </value>
                <value>
                    <fullName>Follow up Student</fullName>
                </value>
                <value>
                    <fullName>Visa Guidance</fullName>
                </value>
                <value>
                    <fullName>Visa Submission</fullName>
                </value>
                <value>
                    <fullName>Open Day UK</fullName>
                </value>
                <value>
                    <fullName>Open Day Australia</fullName>
                </value>
                <value>
                    <fullName>World Education Fair</fullName>
                </value>
                <value>
                    <fullName>Open Day - Canada</fullName>
                </value>
                <value>
                    <fullName>Called by Udhmila</fullName>
                    <isActive>false</isActive>
                    <label>Called by Udhmila</label>
                </value>
                <value>
                    <fullName>Called by Zeina</fullName>
                    <isActive>false</isActive>
                    <label>Called by Zeina</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Divorced</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Middle_Names__c</fullName>
        <label>Middle Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migrated_FB_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migrated FB Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Nearest_Branch__c</fullName>
        <description>Nearest Branch</description>
        <label>Nearest Branch</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Colombo</fullName>
                </value>
                <value>
                    <fullName>Kandy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Not_Modified__c</fullName>
        <formula>IF( CreatedDate ==  LastModifiedDate , &quot;Not Started Working&quot;, &quot;Working&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Not Modified</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opt_out__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field will be used to unsubscribe from CD Mass Emails. Please uncheck it manually if mass emails to be activated</inlineHelpText>
        <label>Unsubscribe from Mass Emails?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Qualifications__c</fullName>
        <inlineHelpText>If you select Other in the multi picklist, specify the qualification here</inlineHelpText>
        <label>Other Qualifications</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_University__c</fullName>
        <label>Other University</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Participated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Passport_Number__c</fullName>
        <label>Passport Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Zip_Code_2__c</fullName>
        <description>correspondence address</description>
        <label>Postal/Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Zip_Code_p__c</fullName>
        <description>postal code for permanent address</description>
        <label>Postal/Zip Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_University__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preferred University</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>University Should be True</errorMessage>
            <filterItems>
                <field>University__c.IsReady__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>University__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReportCalulateMonthYear__c</fullName>
        <formula>CASE(MONTH(DATEVALUE(CreatedDate)), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10,&quot;October&quot;, 
11,&quot;November&quot;, 
12,&quot;December&quot;, 
&quot;None&quot;) &amp; &quot; &quot; &amp; TEXT(YEAR(DATEVALUE(CreatedDate)))</formula>
        <label>Report Calculated Month and Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shared_with_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shared with</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shared_with__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shared with</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hot</fullName>
                </value>
                <value>
                    <fullName>Warm</fullName>
                </value>
                <value>
                    <fullName>Cold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Field__c</fullName>
        <label>Unique Field</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Web_Lead_Message__c</fullName>
        <label>Web Lead Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Web_Lead_Subject__c</fullName>
        <label>Web Lead Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workflow_Date__c</fullName>
        <label>Workflow Date</label>
        <type>Date</type>
    </fields>
    <label>Leads</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Email__c</columns>
        <columns>Country_p__c</columns>
        <columns>Expected_Year_to_Begin__c</columns>
        <columns>Interested_Field_of_Study__c</columns>
        <columns>Lead_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Australia_Application_Week_Dec_2020</fullName>
        <columns>NAME</columns>
        <columns>Campaign_Name__c</columns>
        <columns>Country_Interested_In__c</columns>
        <columns>DOB__c</columns>
        <columns>Current_Qualification__c</columns>
        <columns>Lead_Status__c</columns>
        <columns>Email__c</columns>
        <columns>Mobile__c</columns>
        <columns>Lead_Source__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Expected_Year_to_Begin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Campaign_Name_text__c</field>
            <operation>equals</operation>
            <value>Australian Application Week</value>
        </filters>
        <label>Australia Application Week - Dec 2020</label>
    </listViews>
    <listViews>
        <fullName>Australia_Kandy_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Australia Kandy</label>
        <queue>Australia_Kandy</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Australia_Lead</fullName>
        <columns>NAME</columns>
        <columns>Last_Name__c</columns>
        <columns>Lead_Status__c</columns>
        <columns>Lead_Type__c</columns>
        <columns>Mobile__c</columns>
        <columns>Interested_Field_of_Study__c</columns>
        <columns>Email__c</columns>
        <columns>Country_Interested_In__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Australia Colombo</label>
        <queue>Australia_Colombo</queue>
    </listViews>
    <listViews>
        <fullName>Australia_New_Zealand_Admissions_Day</fullName>
        <columns>NAME</columns>
        <columns>Campaign_Name__c</columns>
        <columns>Country_Interested_In__c</columns>
        <columns>DOB__c</columns>
        <columns>Current_Qualification__c</columns>
        <columns>Lead_Status__c</columns>
        <columns>Email__c</columns>
        <columns>Mobile__c</columns>
        <columns>Lead_Source__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Expected_Year_to_Begin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Campaign_Name__c</field>
            <operation>equals</operation>
            <value>Australia &amp; New Zealand Admissions Day</value>
        </filters>
        <label>Australia &amp; New Zealand Admissions Day</label>
    </listViews>
    <listViews>
        <fullName>Ayanthi_s_Prospective_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Ayanthi&apos;s Prospective</label>
        <queue>Ayanthi_s_Prospective</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSU_Open_Day_Aug_2019</fullName>
        <columns>NAME</columns>
        <columns>Campaign_Name__c</columns>
        <columns>Country_Interested_In__c</columns>
        <columns>DOB__c</columns>
        <columns>Current_Qualification__c</columns>
        <columns>Lead_Status__c</columns>
        <columns>Email__c</columns>
        <columns>Mobile__c</columns>
        <columns>Lead_Source__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Expected_Year_to_Begin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Campaign_Name__c</field>
            <operation>equals</operation>
            <value>Charles Sturt University Open Day_Aug2019</value>
        </filters>
        <label>CSU Open Day_Aug 2019</label>
    </listViews>
    <listViews>
        <fullName>Canada_Kandy_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Canada Kandy</label>
        <queue>Canada_Kandy</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Canada_open_day_4th_July_2019</fullName>
        <columns>NAME</columns>
        <columns>Campaign_Name__c</columns>
        <columns>Country_Interested_In__c</columns>
        <columns>DOB__c</columns>
        <columns>Current_Qualification__c</columns>
        <columns>Lead_Status__c</columns>
        <columns>Email__c</columns>
        <columns>Mobile__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Expected_Year_to_Begin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Campaign_Name__c</field>
            <operation>equals</operation>
            <value>Canada Open Day 4th July 2019</value>
        </filters>
        <label>Canada open day 4th July 2019</label>
    </listViews>
    <listViews>
        <fullName>Created_Today</fullName>
        <columns>NAME</columns>
        <columns>Last_Name__c</columns>
        <columns>Middle_Names__c</columns>
        <columns>Email__c</columns>
        <columns>Mobile__c</columns>
        <columns>Lead_Type__c</columns>
        <columns>Lead_Status__c</columns>
        <columns>Lead_Source__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Created Today</label>
    </listViews>
    <listViews>
        <fullName>Deakin_Application_Week_Dec_2020</fullName>
        <columns>NAME</columns>
        <columns>Campaign_Name__c</columns>
        <columns>Country_Interested_In__c</columns>
        <columns>DOB__c</columns>
        <columns>Current_Qualification__c</columns>
        <columns>Lead_Status__c</columns>
        <columns>Email__c</columns>
        <columns>Mobile__c</columns>
        <columns>Lead_Source__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Expected_Year_to_Begin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Campaign_Name_text__c</field>
            <operation>equals</operation>
            <value>Deakin University Application Week</value>
        </filters>
        <label>Deakin Application Week - Dec 2020</label>
    </listViews>
    <listViews>
        <fullName>Deakin_Open_Day</fullName>
        <columns>NAME</columns>
        <columns>Campaign_Name__c</columns>
        <columns>Country_Interested_In__c</columns>
        <columns>DOB__c</columns>
        <columns>Current_Qualification__c</columns>
        <columns>Lead_Status__c</columns>
        <columns>Email__c</columns>
        <columns>Mobile__c</columns>
        <columns>Lead_Source__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Expected_Year_to_Begin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Campaign_Name__c</field>
            <operation>equals</operation>
            <value>Deakin University Open Day_Aug2019</value>
        </filters>
        <label>Deakin University Open Day_Aug 2019</label>
    </listViews>
    <listViews>
        <fullName>Deakin_Open_Day_July_2020</fullName>
        <columns>NAME</columns>
        <columns>Campaign_Name__c</columns>
        <columns>Country_Interested_In__c</columns>
        <columns>DOB__c</columns>
        <columns>Current_Qualification__c</columns>
        <columns>Lead_Status__c</columns>
        <columns>Email__c</columns>
        <columns>Mobile__c</columns>
        <columns>Lead_Source__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Expected_Year_to_Begin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Campaign_Name__c</field>
            <operation>equals</operation>
            <value>Deakin Open Day - July 2020</value>
        </filters>
        <label>Deakin Open Day - July 2020</label>
    </listViews>
    <listViews>
        <fullName>Fariha_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Fariha</label>
        <queue>Fariha</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>General_Queue_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>General Queue</label>
        <queue>General_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Lead Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Leads</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Address_Line</fullName>
        <active>false</active>
        <description>Address Line Field id Required</description>
        <errorConditionFormula>AND(ISPICKVAL( Lead_Status__c , &apos;Qualified&apos;), ISBLANK(     Address_Line_1__c ), ISCHANGED(Lead_Status__c) )</errorConditionFormula>
        <errorDisplayField>Address_Line_1__c</errorDisplayField>
        <errorMessage>Address Line Field id Required for Qualifying Lead</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Address_Line_2</fullName>
        <active>false</active>
        <description>Address Line Field is Missing</description>
        <errorConditionFormula>AND(ISPICKVAL( Lead_Status__c , &apos;Qualified&apos;), ISBLANK(    Address_Line_2__c ), ISCHANGED(Lead_Status__c) )</errorConditionFormula>
        <errorDisplayField>Address_Line_2__c</errorDisplayField>
        <errorMessage>Address Line  Field is Required for Qualifying Lead</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>City_Field</fullName>
        <active>false</active>
        <description>City Field is Missing</description>
        <errorConditionFormula>AND(ISPICKVAL( Lead_Status__c , &apos;Qualified&apos;), ISBLANK(    City_p__c ), ISCHANGED(Lead_Status__c) )</errorConditionFormula>
        <errorDisplayField>City_p__c</errorDisplayField>
        <errorMessage>City Field is Required for Qualifying Lead</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Country</fullName>
        <active>false</active>
        <description>Country is Required Field</description>
        <errorConditionFormula>AND(ISPICKVAL( Lead_Status__c , &apos;Qualified&apos;), ISBLANK(    Country_p__c ), ISCHANGED(Lead_Status__c) )</errorConditionFormula>
        <errorDisplayField>Country_p__c</errorDisplayField>
        <errorMessage>Country Field is Required for Qualifying Lead</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Current_Qualification</fullName>
        <active>true</active>
        <description>Current qualification value should not be null</description>
        <errorConditionFormula>AND(ISPICKVAL( Lead_Status__c , &apos;Qualified&apos;), ISBLANK(  Current_Qualification__c ), ISCHANGED(Lead_Status__c) )</errorConditionFormula>
        <errorDisplayField>Current_Qualification__c</errorDisplayField>
        <errorMessage>Current Qualification Field  is Required for Qualifying Lead</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Expected_year_to_begin</fullName>
        <active>true</active>
        <description>Expected year to begin is required field</description>
        <errorConditionFormula>AND(ISPICKVAL( Lead_Status__c , &apos;Qualified&apos;), ISBLANK(   Expected_Year_to_Begin__c ), ISCHANGED(Lead_Status__c) )</errorConditionFormula>
        <errorDisplayField>Expected_Year_to_Begin__c</errorDisplayField>
        <errorMessage>Expected year to begin Field is Required for Qualifying Lead</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FirstName_Required</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK( Name )</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>First Name Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>First_Name_should_contain_only_alphabets</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( 
OR( 
ISNULL(Name),REGEX(Name ,&quot;([a-zA-Z- ])*&quot;)))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>First Name Should be in Alphabets</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Gender</fullName>
        <active>true</active>
        <description>Gender is Required Field</description>
        <errorConditionFormula>AND(ISPICKVAL( Lead_Status__c , &apos;Qualified&apos;), ISBLANK(TEXT( Gender__c )), ISCHANGED(Lead_Status__c) )</errorConditionFormula>
        <errorDisplayField>Gender__c</errorDisplayField>
        <errorMessage>Gender Field is Required for Qualifying Lead</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Intrested_Field_of_Study</fullName>
        <active>true</active>
        <description>Intrested field of study is required field</description>
        <errorConditionFormula>AND(ISPICKVAL( Lead_Status__c , &apos;Qualified&apos;), ISBLANK(Interested_Field_of_Study__c  ), ISCHANGED(Lead_Status__c))</errorConditionFormula>
        <errorDisplayField>Interested_Field_of_Study__c</errorDisplayField>
        <errorMessage>Intrested field of study Field is Required for Qualifying Lead</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Last_Name</fullName>
        <active>true</active>
        <description>Last should contain only alphabets</description>
        <errorConditionFormula>NOT( 
OR( 
ISBLANK(Last_Name__c ),REGEX( Last_Name__c ,&quot;([a-zA-Z- ])*&quot;)))</errorConditionFormula>
        <errorDisplayField>Last_Name__c</errorDisplayField>
        <errorMessage>Last Name Should be in Alphabets</errorMessage>
    </validationRules>
</CustomObject>